Swagger update and measurements endpoint prototype implementation
